recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: not found: value lenght
  lenght=lenght+increment
  ^